--- a/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
+++ b/SmartKitty/SmartKitty/Base.lproj/Main.storyboard
@@ -980,16 +980,28 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ny3-yp-ebO" customClass="PrimaryButton" customModule="SmartKitty" customModuleProvider="target">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="abB-Lr-H3J">
                                 <rect key="frame" x="20" y="752" width="374" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="Y0Y-D6-w3e"/>
-                                </constraints>
-                                <state key="normal" title="Save"/>
-                                <connections>
-                                    <action selector="saveButtonTapped:" destination="WQk-ah-VgP" eventType="touchUpInside" id="R29-N0-Jy3"/>
-                                </connections>
-                            </button>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h2T-O7-XG2" customClass="SecondaryButton" customModule="SmartKitty" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="182" height="60"/>
+                                        <state key="normal" title="Cancel"/>
+                                        <connections>
+                                            <action selector="cancelTapped:" destination="WQk-ah-VgP" eventType="touchUpInside" id="zWB-XC-bBE"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ny3-yp-ebO" customClass="ConfirmationButton" customModule="SmartKitty" customModuleProvider="target">
+                                        <rect key="frame" x="192" y="0.0" width="182" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="Y0Y-D6-w3e"/>
+                                        </constraints>
+                                        <state key="normal" title="Save"/>
+                                        <connections>
+                                            <action selector="saveButtonTapped:" destination="WQk-ah-VgP" eventType="touchUpInside" id="R29-N0-Jy3"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="📝 Add a note" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="frL-zb-Ozc">
                                 <rect key="frame" x="20" y="84" width="374" height="29"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
@@ -997,23 +1009,23 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="abB-Lr-H3J" firstAttribute="leading" secondItem="K93-bh-Lfm" secondAttribute="leading" constant="20" id="0zU-Ri-JNj"/>
                             <constraint firstItem="frL-zb-Ozc" firstAttribute="top" secondItem="K93-bh-Lfm" secondAttribute="top" constant="40" id="5ZF-hX-HsG"/>
                             <constraint firstItem="CNA-Gl-W7R" firstAttribute="leading" secondItem="K93-bh-Lfm" secondAttribute="leading" constant="20" id="CjA-2f-GJt"/>
                             <constraint firstItem="K93-bh-Lfm" firstAttribute="trailing" secondItem="CNA-Gl-W7R" secondAttribute="trailing" constant="20" id="EI7-RL-HsW"/>
                             <constraint firstItem="K93-bh-Lfm" firstAttribute="trailing" secondItem="frL-zb-Ozc" secondAttribute="trailing" constant="20" id="GWg-xj-DNj"/>
+                            <constraint firstItem="K93-bh-Lfm" firstAttribute="bottom" secondItem="abB-Lr-H3J" secondAttribute="bottom" constant="50" id="Mar-3N-I14"/>
                             <constraint firstItem="frL-zb-Ozc" firstAttribute="leading" secondItem="K93-bh-Lfm" secondAttribute="leading" constant="20" id="Q9u-w5-LiW"/>
-                            <constraint firstItem="Ny3-yp-ebO" firstAttribute="leading" secondItem="K93-bh-Lfm" secondAttribute="leading" constant="20" id="cDV-t5-ayw"/>
-                            <constraint firstItem="K93-bh-Lfm" firstAttribute="bottom" secondItem="Ny3-yp-ebO" secondAttribute="bottom" constant="50" id="hrm-35-wmt"/>
+                            <constraint firstItem="K93-bh-Lfm" firstAttribute="trailing" secondItem="abB-Lr-H3J" secondAttribute="trailing" constant="20" id="bLv-3f-Lnr"/>
                             <constraint firstItem="CNA-Gl-W7R" firstAttribute="top" secondItem="frL-zb-Ozc" secondAttribute="bottom" constant="20" id="sFL-3e-7Y6"/>
-                            <constraint firstItem="K93-bh-Lfm" firstAttribute="trailing" secondItem="Ny3-yp-ebO" secondAttribute="trailing" constant="20" id="uez-XG-xwG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="K93-bh-Lfm"/>
                     </view>
                     <connections>
+                        <outlet property="buttonsBlockBottomConstraint" destination="Mar-3N-I14" id="vHG-zR-UFU"/>
                         <outlet property="noteTextField" destination="CNA-Gl-W7R" id="nkH-Oo-3eQ"/>
-                        <outlet property="saveBottomContstraint" destination="hrm-35-wmt" id="Y1f-Sm-nJL"/>
                         <outlet property="saveButton" destination="Ny3-yp-ebO" id="kdY-HG-MTe"/>
                     </connections>
                 </viewController>
