--- a/SmartKitty/SmartKitty/Base.lproj/LaunchScreen.storyboard
+++ b/SmartKitty/SmartKitty/Base.lproj/LaunchScreen.storyboard
@@ -3,7 +3,6 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="whiteCatOutline" translatesAutoresizingMaskIntoConstraints="NO" id="cGa-0S-gxf">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logoSK" translatesAutoresizingMaskIntoConstraints="NO" id="cGa-0S-gxf">
                                 <rect key="frame" x="162" y="403" width="90" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="90" id="lju-Qw-INr"/>
@@ -24,7 +23,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" name="CloudBurst"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="cGa-0S-gxf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="LKT-3t-PXO"/>
                             <constraint firstItem="cGa-0S-gxf" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="VOb-vh-U5K"/>
@@ -38,9 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="whiteCatOutline" width="90" height="90"/>
-        <namedColor name="CloudBurst">
-            <color red="0.20784313725490197" green="0.22352941176470589" blue="0.30980392156862746" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
+        <image name="logoSK" width="190" height="164"/>
     </resources>
 </document>
